src/static/assets/scss/common/_body.scss
html {
	overflow-x: hidden;
}

body {
	// overflow-x: hidden; // Prevents horizontal scroll bug

	* {
		// Box Sixing
		box-sizing: border-box;

		// Allow non-breaking characters to wrap
		word-break: break-word;
		word-wrap: break-word;
	}

	&.body--no-scroll {
		max-height: 100vh;
		overflow-y: hidden;
	}
}

